# bonfire

./: Cargo.toml  LICENSE  README.md
.github/workflows/: bonfire.yml
fine_tuning/: FineTuningMistral7B.ipynb
src/: broadcast.rs  controller.rs  error.rs  extractors.rs  main.rs  streaming.rs  text_generation.rs  text_polled.rs  text_streaming.rs  token_stream.rs  utils.rs
src/text_generation/: gguf_quantized.rs  mistral7b.rs  mixtral.rs  mixtral8x7b.rs  utils.rs
