[package]
name = "bonfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(apple)'.dependencies]
accelerate-src = "0.3"

[dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", features = ["accelerate"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }

# cudarc = { version = "0.9.14", features = ["f16"] }

intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
tracing-chrome = "0.7"
tracing-subscriber = "0.3"
tokenizers = "0.14"
hf-hub = "0.3"

actix-web = "4.3"
actix-web-lab = "0.19"
tokio = { version = "1", features = ["full"] }
futures = "0.3"
env_logger = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng"]}

anyhow = "1.0"
thiserror = "1.0"
rayon = "1.8"
once_cell = "1.18"
rand = "0.8"
dotenvy = "0.15"