[package]
name = "bonfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(apple)'.dependencies]
accelerate-src = "0.3"
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0", features = ["accelerate"] }

[target.'cfg(any(not(apple)))'.dependencies]
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3.0"}

[dependencies]
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3.0" }

intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
tokenizers = "0.14"
hf-hub = "0.3"

axum = { version = "0.6", features = [ "json" ] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng"]}

anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
rayon = "1.8"
once_cell = "1.18"
rand = "0.8"