[package]
name = "bonfire"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[target.'cfg(target_os = "macos")'.dependencies]
accelerate-src = "0.3"
metal = { version = "0.27", features = ["mps"]}

half = { version = "2.3", features = ["num-traits", "use-intrinsics", "rand_distr"] }

candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
candle-metal-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3", features = ["accelerate", "metal"] }
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3", features = ["accelerate", "metal"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3", features = ["accelerate"] }

[target.'cfg(any(not(target_os = "macos")))'.dependencies]
cudarc = { version = "0.10", features = ["f16", "nccl"] }
intel-mkl-src = { version = "0.8.1", features = ["mkl-static-lp64-iomp"] }
half = { version = "2.3", features = ["num-traits", "use-intrinsics", "rand_distr"] }
candle-datasets = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
candle-flash-attn = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
candle-onnx = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
candle-kernels = { git = "https://github.com/huggingface/candle.git", version = "0.3" }
candle-core = { git = "https://github.com/huggingface/candle.git", version = "0.3", features = [ "cuda", "cudnn", "mkl"]}
candle-nn = { git = "https://github.com/huggingface/candle.git", version = "0.3", features = ["cuda", "mkl"] }
candle-transformers = { git = "https://github.com/huggingface/candle.git", version = "0.3", features = ["cuda", "flash-attn", "mkl"]}

[dependencies]
tokenizers = "0.14"
safetensors = "0.3"
hf-hub = { version = "0.3", features=["tokio"] }

axum = { version = "0.6", features = [ "json" ] }
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenvy = "0.15"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.4", features = ["v4", "fast-rng"]}

anyhow = "1.0"
thiserror = "1.0"
parking_lot = "0.12"
rayon = "1.8"
once_cell = "1.18"
rand = "0.8"